--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo">
                 <a href="index.html">N <span>P</span></a>
             </div>
-            <h1>Bienvenidos a mi proyecto personal.</h1>
+            <h1>Bienvenidos! Este es mi proyecto personal.</h1>
 
             <div class="overlay overlay-lg">
                 <img src="./Imag/Portafilio/Aretes Azules.jpg" height="400" class="Aretes Azules" alt=""/>
